Revision history for {{$dist->name}}

{{$NEXT}}

0.032     2013-10-17 02:26:03Z (Karen Etheridge)
          - fix some bad templates for files used in the minting profile
          - added [CheckSelfDependency]
          - all prereqs that are used based on config settings are now
            (guaranteed to be) included in the pluginbundle as runtime
            recommendations, as well as injected into the built dist as
            develop requirements (RT#89530)
          - more tweaks to CONTRIBUTING text

0.031     2013-10-13 17:43:37Z (Karen Etheridge)
          - fix discrepancy for [Test::Compile] between prereq versions in
            metadata, and runtime required version (RT#89429)

0.030     2013-10-12 22:09:46Z (Karen Etheridge)
          - xt_mode must be used in [Test::Compile] when xt/ tests run before
            t/ (because 'make'/'Build' has not been run yet)
          - fixed broken gathering of sharedir

0.029     2013-10-12 21:27:40Z (Karen Etheridge)
          --- a.k.a. "the ribasushi release"
          - dropped [Test::CheckDeps]
          - xt/ tests are now run before t/
          - compile test now generated as xt/author/00-compile.t
          - prereqs are noisly, but non-fatally, verified in
            t/00-report-prereqs.t
          - now generating a custom CONTRIBUTING file

0.028     2013-10-06 06:17:12Z (Karen Etheridge)
          - injected t/00-check-deps.t no longer bails out when failures are
            encountered
          - the shell command used to update the local .ackrc is now POSIX
            shell compatible
          - fix unit tests that broke when Dist::Zilla::Plugin::InstallGuide
            1.200001 was released (which retroactively broke the 0.027
            release)

0.027     2013-09-27 03:50:26Z (Karen Etheridge)
          - minted dists once again use the default 'installer' value (now
            [MakeMaker::Fallback] and [ModuleBuildTiny], since 0.025)