@@ -62,7 +62,6 @@ Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CheckSelfDependency = 0
-Dist::Zilla::Plugin::CopyFilesFromBuild = 0
 Dist::Zilla::Plugin::Run::AfterBuild = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
@@ -72,6 +71,7 @@ Dist::Zilla::Plugin::Git::Remote::Check = 0
 Dist::Zilla::Plugin::CheckPrereqsIndexed = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
+Dist::Zilla::Plugin::CopyFilesFromRelease = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::Git::Push = 0
