@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now only generating README.md, LICENSE and CONTRIBUTING in the
+            build directory, and copying back to the repository (and
+            committing) only at release time
 
 0.032     2013-10-17 02:26:03Z (Karen Etheridge)
           - fix some bad templates for files used in the minting profile
